Update footer layout and styles for improved accessibility and consistency

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ p {
 }
 
 p {
-    color: var(--color-dark-500);
+    color: var(--color-grey-300);
 }
 
 ul,
@@ -355,7 +355,7 @@ footer nav {
 }
 
 .grey-text {
-    color: var(--color-dark-500);
+    color: var(--color-grey-500);
 }
 
 .hidden {
